Some issues was solved

--- a/index.html
+++ b/index.html
@@ -648,27 +648,29 @@
 
             <div class="info">
                 <div class="row">
-                    <div class="col">
-                        <div class="address">
-                            <i class="bi bi-geo-alt"></i>
-                            <h4>Location:</h4>
-                            <p>Guadalupe, Zacatecas, Mex.</p>
+                    <div class="col col-lg-12 col-sm-12">
+                        <div class="col col-lg-4 col-sm-12">
+                            <div class="address">
+                                <i class="bi bi-geo-alt"></i>
+                                <h4>Location:</h4>
+                                <p>Guadalupe, Zacatecas, Mex.</p>
+                            </div>
                         </div>
-                    </div>
-                    <div class="col">
-                        <div class="email">
-                            <i class="bi bi-envelope"></i>
-                            <h4>Email:</h4>
-                            <p>yohovanivargas@gmail.com</p>
-                        </div>        
-                    </div>
-                    <div class="col">
-                        <div class="phone">
-                            <i class="bi bi-phone"></i>
-                            <h4>Call:</h4>
-                            <p>+52 492-218-31-56</p>
+                        <div class="col col-lg-4 col-sm-12">
+                            <div class="email">
+                                <i class="bi bi-envelope"></i>
+                                <h4>Email:</h4>
+                                <p>yohovanivargas@gmail.com</p>
+                            </div>        
                         </div>
-            
+                        <div class="col col-lg-4 col-sm-12">
+                            <div class="phone">
+                                <i class="bi bi-phone"></i>
+                                <h4>Call:</h4>
+                                <p>+52 492-218-31-56</p>
+                            </div>
+                
+                        </div>
                     </div>
                 </div>
             </div>
@@ -690,7 +692,6 @@
         <a href="https://www.instagram.com/yohovani/" class="instagram"><i class="bx bxl-instagram"></i></a>
         <a href="https://www.linkedin.com/in/yohovani-vargas/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
       </div>
-      <div class="copyright">      <p>Et aut eum quis fuga eos sunt ipsa nihil. Labore corporis magni eligendi fuga maxime saepe commodi placeat.</p>
         &copy; Copyright <strong><span>MyResume</span></strong>. All Rights Reserved
       </div>
       <div class="credits">
