Some issues was solved

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
       <h1>Yohovani Vargas</h1>
-      <p><span class="typed" data-typed-items="Systems Computer Engineer, Software Developer, Release Manager"></span></p>
+      <p><span class="typed" data-typed-items="Computer Systems Engineer, Software Developer, Release Manager"></span></p>
       <div class="social-links">
         <a href="https://twitter.com/YohovaniV" class="twitter"><i class="bx bxl-twitter"></i></a>
         <a href="https://www.facebook.com/yohovani.vargas/" class="facebook"><i class="bx bxl-facebook"></i></a>
@@ -89,7 +89,7 @@
             <img src="assets/img/profile-img.jpg" class="img-fluid" alt="75%">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content">
-            <h3>Systems Computer Engineer.</h3>
+            <h3>Computer Systems Engineer.</h3>
             <p class="fst-italic">
                 Enthusiastic and driven Systems Engineer with proven track record of understanding and translating technical requirements to improve system accuracy and reliability
             </p>
@@ -210,7 +210,7 @@
 
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
-              <h4>Bachelor in Computer Science &amp; Systems Computer Engineer</h4>
+              <h4>Bachelor in Computer Science &amp; Computer Systems Engineer</h4>
               <h5>2015 - 2020</h5>
               <p><em>Instituto Politecnico Nacional</em></p>
               <p>Zacatecas, Mex.</p>
